@@ -226,6 +226,9 @@
 </h3>
 <p>This option can be used for validating a Phoronix Test Suite test suite as being compliant against the OpenBenchmarking.org specification.</p>
 <h1>Result Management</h1>
+<h3>analyze-run-times<em>  [Test Result]</em>
+</h3>
+<p>This option will read a saved test results file and print the statistics about how long the testing took to complete.</p>
 <h3>auto-sort-result-file<em>  [Test Result]</em>
 </h3>
 <p>This option is used if you wish to automatically attempt to sort the results by their result identifier string.</p>
